# navigation-potential

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  random_obstacle.py  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/navigation_potential/: __init__.py  cli.py  environments.py  fields.py  main.py  planners.py  solvers.py  visualisation.py  visualizer.py
src/navigation_potential/environments/: grid_map.py  grid_world.py
tests/: __init__.py  test_grid_world.py  test_navigation_potential.py  test_random_obstacle.py
