[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "navigation_potential"
version = "0.1.0"
description = "A simple plugin for robotic navigation using artifical potential fileds or laplacian potentials"
readme = "README.rst"
authors = [
  {name = "Robin CREMESE", email = "robin.cremese@gmail.com"}
]
requires-python = ">=3.10"
maintainers = [
  {name = "Robin CREMESE", email = "robin.cremese@gmail.com"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/rcremese/navigation_potential/issues"
changelog = "https://github.com/rcremese/navigation_potential/blob/master/changelog.md"
homepage = "https://github.com/rcremese/navigation_potential"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

